--- a/about.html
+++ b/about.html
@@ -18,6 +18,10 @@
       <img src="mrc.png" alt="" class="logo" onclick="document.location='HOME.html'">
     </header>
 <nav>
+  <input type="checkbox" id="check">
+  <label for="check" class="checkbtn">
+    <i class="fas fa-bars"></i>
+    </label>
 <ul>
 <li > <a href="HOME.html"><i class="fa-solid fa-house"></i> HOME</a></li>
 <li><a href="product.html" > <i class="fa-solid fa-cart-shopping"></i> PRODUCT</a></li>
