--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="nav.html">
   <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
-  <script>src=""</script>
+  <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
 </head>
 <body style="background-color: gray;" id="bd">
   <div class="clr2">
@@ -19,7 +19,10 @@
       <img src="mrc.png" alt="" class="logo"  onclick="document.location='HOME.html'">
     </header>
 <nav>
-<div>
+  <input type="checkbox" id="check">
+  <label for="check" class="checkbtn">
+    <i class="fas fa-bars"></i>
+    </label>
   <ul>
     <li > <a href="HOME.html"><i class="fa-solid fa-house"></i> HOME</a></li>
     <li><a href="product.html" > <i class="fa-solid fa-cart-shopping"></i> PRODUCT</a></li>
@@ -28,10 +31,7 @@
     </ul>
 </nav>
 </div>
-  <div class="alert alert-info alert-dismissible">
-    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
-    <strong>Info!</strong> All field must be fild.</strong>
-    </div>
+
   <div id="cnt">
   <form id="contact">
     <input type="text" placeholder="NAME" required>
