--- a/product.html
+++ b/product.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
-<body class="bg-primary">
+<body>
   <div class="clr2">
   
     <header>
@@ -30,5 +30,130 @@
 </ul>
 </nav>
 </div>
+<div class="cars">
+<div id="card1">
+  
+  <img src="PRJT PIC/sl_55.jpg" class="sl55">
+
+  <p>Mercedes-AMG SL 55 4MATIC+</p>
+
+  <button type="button " class="btn btn-secondary" onclick="document.location='contact.html'">CONACT US !</button>
+  <button type="button" class="btn btn-primary"><i class="fa-solid fa-truck-fast"></i> BUY NOW</button>
+</div>
+
+
+
+<div id="card1">
+  
+  <img src="PRJT PIC/class c.jpg" class="sl55">
+
+  <p>Mercedes Classe C</p>
+
+  <button type="button " class="btn btn-secondary" onclick="document.location='contact.html'">CONACT US !</button>
+  <button type="button" class="btn btn-primary"><i class="fa-solid fa-truck-fast"></i> BUY NOW</button>
+</div>
+<div id="card1">
+  
+  <img src="PRJT PIC/manufaktur_opalite_white_bright_obsidian_black.jpg" class="sl55">
+
+  <p>Mercedes-Maybach Classe S</p>
+
+  <button type="button " class="btn btn-secondary" onclick="document.location='contact.html'">CONACT US !</button>
+  <button type="button" class="btn btn-primary"><i class="fa-solid fa-truck-fast"></i>BUY NOW</button>
+</div>
+<div id="card1">
+  
+  <img src="PRJT PIC/ber.jpg" class="sl55">
+
+  <p>Classe A Berline</p>
+
+  <button type="button " class="btn btn-secondary" onclick="document.location='contact.html'">CONACT US !</button>
+  <button type="button" class="btn btn-primary"><i class="fa-solid fa-truck-fast"></i> BUY NOW</button>
+</div>
+<div id="card1">
+  
+  <img src="https://images.netdirector.co.uk/gforces-auto/image/upload/w_822,h_548,q_auto,c_fill,f_auto,fl_lossy/auto-client/ac0ffd18e7a826e2a1559978ff3a21fa/e_200.png" class="sl55">
+
+  <p>Mercedes Classe E</p>
+
+  <button type="button " class="btn btn-secondary" onclick="document.location='contact.html'">CONACT US !</button>
+  <button type="button" class="btn btn-primary"><i class="fa-solid fa-truck-fast"></i> BUY NOW</button>
+</div>
+<div id="card1">
+  
+  <img src="https://images.netdirector.co.uk/gforces-auto/image/upload/w_822,h_548,q_auto,c_fill,f_auto,fl_lossy/auto-client/071a8fcebe01d097491610b59f7a9bf4/high_tech_silver_metallic.png" class="sl55">
+
+  <p>Mercedes Classe S</p>
+
+  <button type="button " class="btn btn-secondary" onclick="document.location='contact.html'">CONACT US !</button>
+  <button type="button" class="btn btn-primary"><i class="fa-solid fa-truck-fast"></i> BUY NOW</button>
+</div>
+<div id="card1">
+  
+  <img src="https://images.netdirector.co.uk/gforces-auto/image/upload/w_822,h_548,q_auto,c_fill,f_auto,fl_lossy/auto-client/78c652da97ff48081ea62846e8ad6d60/v_class330.png" class="sl55">
+
+  <p>Mercedes Classe V</p>
+
+  <button type="button " class="btn btn-secondary" onclick="document.location='contact.html'">CONACT US !</button>
+  <button type="button" class="btn btn-primary"><i class="fa-solid fa-truck-fast"></i> BUY NOW</button>
+</div>
+<div id="card1">
+  
+  <img src="https://images.netdirector.co.uk/gforces-auto/image/upload/w_822,h_548,q_auto,c_fill,f_auto,fl_lossy/auto-client/351ddff32010bdc2bb62352ed50f5a48/ahatchback.png" class="sl55">
+
+  <p>Mercedes Classe A</p>
+
+  <button type="button " class="btn btn-secondary" onclick="document.location='contact.html'">CONACT US !</button>
+  <button type="button" class="btn btn-primary"> <i class="fa-solid fa-truck-fast"></i> BUY NOW</button>
+</div>
+<div id="card1">
+  
+  <img src="https://images.netdirector.co.uk/gforces-auto/image/upload/w_822,h_548,q_auto,c_fill,f_auto,fl_lossy/auto-client/72c1d74e1adebd336c402c6fd582a66f/manufaktur_graphite_gray_magno.png" class="sl55">
+
+  <p>Mercedes CLE Cabriolet</p>
+
+  <button type="button " class="btn btn-secondary" onclick="document.location='contact.html'">CONACT US !</button>
+  <button type="button" class="btn btn-primary"><i class="fa-solid fa-truck-fast"></i> BUY NOW</button>
+</div>
+<div id="card1">
+  
+  <img src="https://images.netdirector.co.uk/gforces-auto/image/upload/w_822,h_548,q_auto,c_fill,f_auto,fl_lossy/auto-client/1e00776ec988af178a5cc914ee00b0d2/sl_63.png" class="sl55">
+
+  <p>Mercedes SL Roadster</p>
+
+  <button type="button " class="btn btn-secondary" onclick="document.location='contact.html'">CONACT US !</button>
+  <button type="button" class="btn btn-primary"> <i class="fa-solid fa-truck-fast"></i>BUY NOW</button>
+</div>
+<div id="card1">
+  
+  <img src="https://images.netdirector.co.uk/gforces-auto/image/upload/w_822,h_548,q_auto,c_fill,f_auto,fl_lossy/auto-client/47cddbd762c7a2beb85b34f3b519a0ab/selenite_gray_metallic.png" class="sl55">
+
+  <p>Mercedes AMG GT Coupé</p>
+
+  <button type="button " class="btn btn-secondary" onclick="document.location='contact.html'">CONACT US !</button>
+  <button type="button" class="btn btn-primary"><i class="fa-solid fa-truck-fast"></i> BUY NOW</button>
+</div>
+<div id="card1">
+  
+  <img src="https://images.netdirector.co.uk/gforces-auto/image/upload/w_822,h_548,q_auto,c_fill,f_auto,fl_lossy/auto-client/06fc8062e6259d1f87bbad508802c938/gclass.png" class="sl55">
+
+  <p>Mercedes Class G</p>
+
+  <button type="button " class="btn btn-secondary" onclick="document.location='contact.html'">CONACT US !</button>
+  <button type="button" class="btn btn-primary"><i class="fa-solid fa-truck-fast"></i> BUY NOW</button>
+</div>
+</div>
+ <!-- Footer Section -->
+ <footer>
+  <div class="footer-content3">
+      <p>&copy; 2025 Mercedes Hub. All Rights Reserved.</p>
+      <div class="social-links">
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-solid fa-g"></i></a>
+      </div>
+  </div>
+</footer>
 </body>
-</html>
+</html> 
