--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 </div>
  <!-- About Us Section -->
  <section id="about-us">
-  <div class="container">
+  <div class="containerabout">
       <div class="about-content">
           <h2>About Us</h2>
           <p>Welcome to our car dealership website! We are passionate about offering the best selection of new and used cars at competitive prices. Our team of automotive experts works tirelessly to ensure you find the perfect car to match your needs and budget.</p>
@@ -44,5 +44,17 @@
       </div>
   </div>
 </section>
+ <!-- Footer Section -->
+ <footer>
+  <div class="footer-content">
+      <p>&copy; 2025 Mercedes Hub. All Rights Reserved.</p>
+      <div class="social-links">
+          <a href="#"><i class="fa-brands fa-facebook"></i></a>
+          <a href="#"><i class="fa-brands fa-twitter"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram"></i></a>
+          <a href="#"><i class="fa-solid fa-g"></i></a>
+      </div>
+  </div>
+</footer>
 </body>
 </html>
