--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,10 @@
     <i class="fas fa-bars"></i>
     </label>
   <ul>
-    <li > <a href="HOME.html"><i class="fa-solid fa-house"></i> HOME</a></li>
-    <li><a href="product.html" > <i class="fa-solid fa-cart-shopping"></i> PRODUCT</a></li>
-    <li><a href="about.html"><i class="fa-solid fa-circle-info"></i> ABOUT US</a></li>
-    <li><a href="contact.html"><i class="fa-solid fa-envelope"></i> CONTACT US</a></li>
+    <li > <a href="HOME.html"><i class="fa-solid fa-house" id="icn"></i> HOME</a></li>
+    <li><a href="product.html" > <i class="fa-solid fa-cart-shopping" id="icn"></i> PRODUCT</a></li>
+    <li><a href="about.html"><i class="fa-solid fa-circle-info" id="icn"></i> ABOUT US</a></li>
+    <li><a href="contact.html"><i class="fa-solid fa-envelope" id="icn"></i> CONTACT US</a></li>
     </ul>
 </nav>
 </div>
