--- a/product.html
+++ b/product.html
@@ -12,7 +12,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
 <body>
-  <div class="clr2">
+  <div class="clr">
   
     <header>
       <img src="mrc.png" alt="" class="logo" onclick="document.location='HOME.html'">
@@ -23,10 +23,10 @@
     <i class="fas fa-bars"></i>
     </label>
 <ul>
-<li > <a href="HOME.html"><i class="fa-solid fa-house"></i> HOME</a></li>
-<li><a href="product.html" > <i class="fa-solid fa-cart-shopping"></i> PRODUCT</a></li>
-<li><a href="about.html"><i class="fa-solid fa-circle-info"></i> ABOUT US</a></li>
-<li><a href="contact.html"><i class="fa-solid fa-envelope"></i> CONTACT US</a></li>
+<li > <a href="HOME.html"><i class="fa-solid fa-house" id="icn"></i> HOME</a></li>
+<li><a href="product.html" > <i class="fa-solid fa-cart-shopping" id="icn"></i> PRODUCT</a></li>
+<li><a href="about.html"><i class="fa-solid fa-circle-info" id="icn"></i> ABOUT US</a></li>
+<li><a href="contact.html"><i class="fa-solid fa-envelope" id="icn"></i> CONTACT US</a></li>
 </ul>
 </nav>
 </div>
@@ -143,17 +143,5 @@
   <button type="button" class="btn btn-primary"><i class="fa-solid fa-truck-fast"></i> BUY NOW</button>
 </div>
 </div>
- <!-- Footer Section -->
- <footer>
-  <div class="footer-content3">
-      <p>&copy; 2025 Mercedes Hub. All Rights Reserved.</p>
-      <div class="social-links">
-          <a href="#"><i class="fa-brands fa-facebook"></i></a>
-          <a href="#"><i class="fa-brands fa-twitter"></i></a>
-          <a href="#"><i class="fa-brands fa-instagram"></i></a>
-          <a href="#"><i class="fa-solid fa-g"></i></a>
-      </div>
-  </div>
-</footer>
 </body>
 </html> 
