--- a/HOME.html
+++ b/HOME.html
@@ -95,7 +95,7 @@
             system. This system allows intuitive control through touch, voice commands, and gesture recognition. The latest models feature a digital cockpit with a customizable display that shows navigation, performance data, and vehicle settings.The steering wheel, usually wrapped in leather, houses controls for various systems, ensuring that everything is within easy reach. Ambient features, such as a high-quality sound system (often Burmester), provide excellent acoustics, enhancing the overall driving experience.
 
             Attention to detail is a hallmark of every Mercedes interior, where every stitch, button, and switch is designed to offer both functionality and elegance. Whether you're in a sleek coupe, a family-friendly SUV, or an executive sedan, the interior exudes a sense of refined luxury that perfectly complements the driving performance.</p>
-
+    </div>
 </div>
  <footer>
   <div class="footer-content2">
