--- a/product.html
+++ b/product.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 </head>
-<body>
+<body class="bg-dark">
   <div class="clr">
   
     <header>
